# chainlit_work

./: .gitignore  aaa  main.py  package-lock.json
01_chainlitTest/: .gitignore  README.md  chainlit.md  main.py  pyproject.toml
01_chainlitTest/src/: main.py
02_electronTest/: .gitignore  Electron01.md  Electron02.md  Electron03.md  Electron04.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
03_chainlit-electron-playground/: .gitignore  00_online_check.bat  01_download_packages.bat  02_python_setup.bat  03_npm_setup.bat  README.md  ディレクトリ構造.md
03_chainlit-electron-playground/chainlit_app/: 03_chainlit-electron-playground_project_summary.txt  README.md  chainlit.md  chainlit.yaml  config.py  error_utils.py  file_utils.py  history_utils.py  main.py  models_utils.py  pyproject.toml  ui_actions.py
03_chainlit-electron-playground/chainlit_app/.chainlit/: config.toml
03_chainlit-electron-playground/chainlit_app/.chainlit/client/: header_buttons.js
03_chainlit-electron-playground/electron/: env-editor.html  header.html  main.js  package-lock.json  package.json  preload.js
03_chainlit-electron-playground/electron/build-scripts/: after-pack.js
03_chainlit-electron-playground/electron/src/: chainlit-preload.js  env-editor.js  header.js
03_chainlit-electron-playground/npm_temp/: electron-36.0.0.tgz  electron-builder-26.0.12.tgz  electron-squirrel-startup-1.0.1.tgz  package-lock.json  package.json  temp_package.json
03_chainlit-electron-playground/python-3.12.4-embed/: python._pth  python312.pth
03_chainlit-electron-playground/python_packages/: Lazify-0.4.0-py2.py3-none-any.whl  anthropic-0.49.0-py3-none-any.whl  asyncer-0.0.7-py3-none-any.whl  fsspec-2025.3.2-py3-none-any.whl  greenlet-3.2.0-cp312-cp312-win_amd64.whl  huggingface_hub-0.30.2-py3-none-any.whl  jiter-0.9.0-cp312-cp312-win_amd64.whl  langchain-0.3.23-py3-none-any.whl  langchain_core-0.3.54-py3-none-any.whl  langsmith-0.3.32-py3-none-any.whl  mcp-1.6.0-py3-none-any.whl  opentelemetry_api-1.31.1-py3-none-any.whl  opentelemetry_exporter_otlp-1.31.1-py3-none-any.whl  opentelemetry_exporter_otlp_proto_common-1.31.1-py3-none-any.whl  opentelemetry_exporter_otlp_proto_grpc-1.31.1-py3-none-any.whl  opentelemetry_exporter_otlp_proto_http-1.31.1-py3-none-any.whl  opentelemetry_instrumentation-0.52b1-py3-none-any.whl  opentelemetry_instrumentation_alephalpha-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_anthropic-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_bedrock-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_chromadb-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_cohere-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_crewai-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_google_generativeai-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_groq-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_haystack-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_lancedb-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_langchain-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_llamaindex-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_logging-0.52b1-py3-none-any.whl  opentelemetry_instrumentation_marqo-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_milvus-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_mistralai-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_ollama-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_openai-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_pinecone-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_qdrant-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_replicate-0.39.2-py3-none-any.whl  opentelemetry_instrumentation_requests-0.52b1-py3-none-any.whl  opentelemetry_instrumentation_sagemaker-0.39.2-py3-none-any.whl  (+28 more)
04_Chainlit_app/: .gitignore  chat_handler.py  config.py  file_handler.py  models.py  requirements.txt  utils.py
04_Chainlit_app_Chat_Completions_API/: .gitignore  log_helper.py  main.py  models.py  utils.py  ファイル構造.md
04_Chainlit_app_Responses API/: README.md  config.py  debug_helper.py
05_APIpractice/: .gitignore  OpenAI Responses API コードサンプル.md  README.md  pyproject.toml
05_APIpractice/src/: 01_01_simpleChat.py  01_02_simpleChatStream.py  02_01_file_search_single_file.py  02_02_file_search_multi_file.py  03_01_vector_serch_FileUpload.py  03_02_vector_serch_vector_stores.create.py  03_03_vector_serch_files.create.py  03_04_vector_serch_responses.create.py  04_tool_choice_web_search_preview.py  05_01_01_tool_choice_input_image_InternetURL.py  05_01_02_tool_choice_input_image_fileID.py  05_02_Image.create.py  06_previous_response_id_Thread.py  07_create_fine-tune.py  08_use_fine-tune.py  09_01_text_to_speech.py  09_02_speech_to_text.py
