[project]
name = "01_chainlitTest"                 # ã“ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®åå‰ï¼ˆå†…éƒ¨è­˜åˆ¥ç”¨ã§ã™ã€‚æ—¥æœ¬èªžã§ã‚‚å•é¡Œã‚ã‚Šã¾ã›ã‚“ãŒè‹±æ•°å­—ãŒæŽ¨å¥¨ï¼‰
version = "0.1.0"                         # ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã€‚æ…£ä¾‹ã¨ã—ã¦æœ€åˆã¯ "0.1.0" ãªã©ã‹ã‚‰å§‹ã‚ã¾ã™ã€‚
description = "chainlitã®ãƒˆãƒ¬ãƒ¼ãƒ‹ãƒ³ã‚°ã‚¹ãƒšãƒ¼ã‚¹"  # ã“ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®èª¬æ˜Žï¼ˆè‡ªç”±è¨˜è¿°ï¼‰
authors = [
    {name = "masafumi", email = "test@gmai.com"}  # ä½œè€…åã¨é€£çµ¡å…ˆï¼ˆå…¬é–‹ã™ã‚‹ã‚ã‘ã§ã¯ãªã„ã®ã§ä»»æ„ã§ã™ï¼‰
]
readme = "README.md"                     # ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®èª¬æ˜Žãƒ•ã‚¡ã‚¤ãƒ«ï¼ˆã‚ã‚Œã°è‡ªå‹•çš„ã«ä½¿ã‚ã‚Œã¾ã™ï¼‰
requires-python = ">=3.12,<4.0"          # å¯¾å¿œã™ã‚‹Pythonã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ï¼ˆã“ã“ã§ã¯ Python3.12 ä»¥ä¸ŠãŒå¿…è¦ï¼‰

# ã“ã“ã¯ã€Œå¿…è¦ãªãƒ©ã‚¤ãƒ–ãƒ©ãƒªï¼ˆæ©Ÿèƒ½ï¼‰ã€ã‚’ã¾ã¨ã‚ã¦è¨˜è¼‰ã—ã¦ã„ã¾ã™
dependencies = [
    "openai (>=1.75.0,<2.0.0)",           # OpenAI API ã‚’ä½¿ã†ãŸã‚ã®ãƒ©ã‚¤ãƒ–ãƒ©ãƒª
    "langchain (>=0.3.23,<0.4.0)",        # RAGãªã©ã®é«˜åº¦ãªAIå¯¾è©±å‡¦ç†ã«ä¾¿åˆ©ãªãƒ„ãƒ¼ãƒ«
    "dotenv (>=0.9.9,<0.10.0)",           # .env ãƒ•ã‚¡ã‚¤ãƒ«ã‹ã‚‰ç§˜å¯†æƒ…å ±ã‚’èª­ã¿è¾¼ã‚€ãŸã‚ã®ã‚‚ã®
    "chainlit (>=2.5.5,<3.0.0)"           # ãƒãƒ£ãƒƒãƒˆåž‹ã‚¢ãƒ—ãƒªã‚’æ§‹ç¯‰ã™ã‚‹ãŸã‚ã®ãƒ•ãƒ¬ãƒ¼ãƒ ãƒ¯ãƒ¼ã‚¯
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]  # Poetry ãŒå†…éƒ¨ã§ä½¿ç”¨ã™ã‚‹ãƒ“ãƒ«ãƒ‰ã‚·ã‚¹ãƒ†ãƒ ï¼ˆé€šå¸¸ã“ã®ã¾ã¾ã§OKï¼‰
build-backend = "poetry.core.masonry.api"

# ðŸ”§ ã“ã®è¨­å®šãŒãƒã‚¤ãƒ³ãƒˆï¼
package-mode = false
# â†’ ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã‚’ã€ŒPythonãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«ï¼ˆä»–ã‹ã‚‰importã•ã‚Œã‚‹ã‚ˆã†ãªå½¢å¼ï¼‰ã€ã¨ã—ã¦ã§ã¯ãªãã€
#   å˜ãªã‚‹ã‚¹ã‚¯ãƒªãƒ—ãƒˆå®Ÿè¡Œã®ãŸã‚ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã¨ã—ã¦æ‰±ã†ãƒ¢ãƒ¼ãƒ‰ã§ã™ã€‚
#   ä»Šå›žã®ã‚ˆã†ãªã€ŒChainlitã§UIä»˜ãã‚¢ãƒ—ãƒªã‚’ä½œã‚‹ã€ã‚ˆã†ãªå ´åˆã¯ã€falseã§OKï¼
