[project]
name = "src"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "masafumi",email = "test@gmai.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "chainlit (>=2.5.5,<3.0.0)",
    "openai (>=1.77.0,<2.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
