# ----------------------------------------------------------------
# PEP 621æº–æ‹ : ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆãƒ¡ã‚¿ãƒ‡ãƒ¼ã‚¿ã¯ [project] ã«è¨˜è¿°
# Poetry 2.0+ ä»¥é™ã¯ã“ã¡ã‚‰ã®å½¢å¼ãŒæŽ¨å¥¨ã•ã‚Œã¾ã™
# ----------------------------------------------------------------
[project]
name = "03_chainlit-electron-playground"                 # ã“ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®åå‰ï¼ˆå†…éƒ¨è­˜åˆ¥ç”¨ã§ã™ã€‚æ—¥æœ¬èªžã§ã‚‚å•é¡Œã‚ã‚Šã¾ã›ã‚“ãŒè‹±æ•°å­—ãŒæŽ¨å¥¨ï¼‰
version = "0.1.0"                                        # ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã€‚æ…£ä¾‹ã¨ã—ã¦æœ€åˆã¯ "0.1.0" ãªã©ã‹ã‚‰å§‹ã‚ã¾ã™ã€‚
description = "chainlitã®ãƒˆãƒ¬ãƒ¼ãƒ‹ãƒ³ã‚°ã‚¹ãƒšãƒ¼ã‚¹"        # ã“ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®èª¬æ˜Žï¼ˆè‡ªç”±è¨˜è¿°ï¼‰
readme = "README.md"                                     # ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã®èª¬æ˜Žãƒ•ã‚¡ã‚¤ãƒ«ï¼ˆã‚ã‚Œã°è‡ªå‹•çš„ã«ä½¿ã‚ã‚Œã¾ã™ï¼‰
authors = [
    { name = "masafumi", email = "test@gmai.com" }       # ä½œè€…åã¨é€£çµ¡å…ˆï¼ˆè¾žæ›¸å½¢å¼ã«ä¿®æ­£ï¼‰
]
requires-python = ">=3.12,<4.0"               
dynamic = ["dependencies"]                    

# ----------------------------------------------------------------
# Poetryç‰¹æœ‰ã®è¿½åŠ è¨­å®šï¼ˆPEP 621ã«å«ã¾ã‚Œãªã„ã‚‚ã®ï¼‰ã¯ã“ã¡ã‚‰ã«æ®‹ã—ã¾ã™
# ----------------------------------------------------------------
[tool.poetry]
package-mode = false                                     # Poetry 1.8ä»¥é™å°‚ç”¨è¨­å®š

# ðŸ”§ ã“ã®è¨­å®šãŒãƒã‚¤ãƒ³ãƒˆï¼
# â†’ ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã‚’ã€ŒPythonãƒ¢ã‚¸ãƒ¥ãƒ¼ãƒ«ï¼ˆä»–ã‹ã‚‰importã•ã‚Œã‚‹ã‚ˆã†ãªå½¢å¼ï¼‰ã€ã¨ã—ã¦ã§ã¯ãªãã€
#   å˜ãªã‚‹ã‚¹ã‚¯ãƒªãƒ—ãƒˆå®Ÿè¡Œã®ãŸã‚ã®ãƒ—ãƒ­ã‚¸ã‚§ã‚¯ãƒˆã¨ã—ã¦æ‰±ã†ãƒ¢ãƒ¼ãƒ‰ã§ã™ã€‚
#   ä»Šå›žã®ã‚ˆã†ãªã€ŒChainlitã§UIä»˜ãã‚¢ãƒ—ãƒªã‚’ä½œã‚‹ã€ã‚ˆã†ãªå ´åˆã¯ã€falseã§OKï¼

# ----------------------------------------------------------------
# ã“ã“ã¯ã€Œå¿…è¦ãªãƒ©ã‚¤ãƒ–ãƒ©ãƒªï¼ˆæ©Ÿèƒ½ï¼‰ã€ã‚’ã¾ã¨ã‚ã¦è¨˜è¼‰ã—ã¦ã„ã¾ã™
# ----------------------------------------------------------------
[tool.poetry.dependencies]
python = ">=3.12,<4.0"                   # Pythonãƒãƒ¼ã‚¸ãƒ§ãƒ³ã‚‚ä¾å­˜é–¢ä¿‚ã¨ã—ã¦æ˜Žç¤º
openai = ">=1.75.0,<2.0.0"               # OpenAI API ã‚’ä½¿ã†ãŸã‚ã®ãƒ©ã‚¤ãƒ–ãƒ©ãƒª
langchain = ">=0.3.23,<0.4.0"            # RAGãªã©ã®é«˜åº¦ãªAIå¯¾è©±å‡¦ç†ã«ä¾¿åˆ©ãªãƒ„ãƒ¼ãƒ«
dotenv = ">=0.9.9,<0.10.0"               # .env ãƒ•ã‚¡ã‚¤ãƒ«ã‹ã‚‰ç§˜å¯†æƒ…å ±ã‚’èª­ã¿è¾¼ã‚€ãŸã‚ã®ã‚‚ã®
chainlit = ">=2.5.5,<3.0.0"              # ãƒãƒ£ãƒƒãƒˆåž‹ã‚¢ãƒ—ãƒªã‚’æ§‹ç¯‰ã™ã‚‹ãŸã‚ã®ãƒ•ãƒ¬ãƒ¼ãƒ ãƒ¯ãƒ¼ã‚¯

# ----------------------------------------------------------------
# é–‹ç™ºæ™‚å°‚ç”¨ã®ãƒ©ã‚¤ãƒ–ãƒ©ãƒªã‚’ã“ã“ã«è¨˜è¼‰ï¼ˆé€šå¸¸ã®å®Ÿè¡Œã«ã¯ä¸è¦ï¼‰
# ----------------------------------------------------------------
[tool.poetry.group.dev.dependencies]
ordered-set = "^4.1.0"
zstandard = "^0.23.0"

# ----------------------------------------------------------------
# Poetry ãŒå†…éƒ¨ã§ä½¿ç”¨ã™ã‚‹ãƒ“ãƒ«ãƒ‰ã‚·ã‚¹ãƒ†ãƒ ï¼ˆé€šå¸¸ã“ã®ã¾ã¾ã§OKï¼‰
# ----------------------------------------------------------------
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
